@@ -1,13 +1,13 @@
 # Created by Jevoom
 #
-# 17-Nov-2012
-#   Revert to /var/log/jerbil
+# 19-Jul-2013
+#   Add a proxy logger to enable logging to either a full logger or to a display
 
 module Jellog
-  # version set to 1.0.14
-  Version = '1.0.14'
-  # date set to 17-Nov-2012
-  Version_Date = '17-Nov-2012'
-  #ident string set to: jellog-1.0.14 17-Nov-2012
-  Ident = 'jellog-1.0.14 17-Nov-2012'
+  # version set to 1.0.15
+  Version = '1.0.15'
+  # date set to 19-Jul-2013
+  Version_Date = '19-Jul-2013'
+  #ident string set to: jellog-1.0.15 19-Jul-2013
+  Ident = 'jellog-1.0.15 19-Jul-2013'
 end
